<resources>
    <string name="app_name">DatabaseTask-2021-v2</string>
    <string name="demo">demo</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="breed">Breed</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <!-- Sync Preferences -->
    <string name="list_title">Database processing implementation</string>
    <string name="dialog_title">select database implementation</string>
    <string name="summary_database_title">select the preferred database implementation</string>
    <string-array name="keys">
        <item>Cursor</item>
        <item>Room</item>
    </string-array>
    <string-array name="values">
        <item>Cursor</item>
        <item>Room</item>
    </string-array>
    <string-array name="summary_database">
        <item>Cursor</item>
        <item>Room</item>
    </string-array>
    <string name="settings">settings</string>
    <!--menu titles-->
    <string name="menu_title_get_all">get all</string>
    <string name="menu_title_sort_by_name">sort by name</string>
    <string name="menu_title_sort_by_age">sort by age</string>
    <string name="menu_title_sort_by_breed">sort by breed</string>
    <string name="menu_title_filter">filter</string>
    <string name="menu_title_settings">settings</string>

    <!--dialog fragment-->
    <string name="add_dog_title">Add new dog</string>
    <string name="update_dog_title">Update dog</string>
    <string name="dialog_fragment_save">save</string>
    <string name="dialog_fragment_cancel">cancel</string>

    <!--filter dialog fragment-->
    <string name="filter_title">Select sorting</string>
    <string name="sort_by_id">Sort by id</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_age">Sort by age</string>
    <string name="sort_by_breed">Sort by breed</string>

</resources>